--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Science of the Slain</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <p>yo.</p>
+    <header>
+        <h1>Science of the Slain</h1>
+    </header>
     <p>Welcome to the Science of the Slain.</p>
+
+    <p>This is a simple HTML page that serves as a starting point for your project.</p>
+
+    <footer>
+        <p>&copy; 2025 Science of the Slain</p>
+    </footer>
 </body>
 </html>
