--- a/index.html
+++ b/index.html
@@ -7,15 +7,144 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <h1>Science of the Slain</h1>
-    </header>
-    <p>Welcome to the Science of the Slain.</p>
+    <script>NekoType="black"</script>
+		<h1 id=nl><script src="https://webneko.net/n20171213.js"></script><a 
+		href="https://webneko.net">Neko</a></h1>
 
-    <p>This is a simple HTML page that serves as a starting point for your project.</p>
+		<div class="header">
+			<h1>&lt;/webdev club&gt;</h1>
+		</div>
+		<div class="nav">
+			<a href="https://engage.colum.edu/club_signup?group_type=47523&category_tags=" target="_blank">Engage</a>
+			<a href="spotify.html">Spotify</a>
+			<a href="discord.html">Discord</a>
+			<a href="https://neocities.org/" target="_blank">Neocities</a>
+		</div>
+		<main>
+			<div class="about-site" style="background-image: url('css/img/gridbackground.png');">
+				<h2 class="about-club">About Us</h2>
+				<marquee behavior=scroll direction="right" scrollamount="4">jjjjjooiiinnnn usssssss</marquee>
+				<p class="about-club">•°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ</p>
+				<h4 class="about-club">Welcome to Columbia College Chicago's only Web Dev Club</h4>
+				<p class="about-club">We're brewing a digital alchemy that transforms creativity into interactive magic. Columbia College Chicago doesn't have a web development major, so we're taking matters into our own hands. We're building a community where artists can learn code, and the programming major's can have more fun with art. </p>
+				<marquee behavior=scroll direction="left" scrollamount="10" >oooooooo you wanna join us so baddd</marquee>
+				<div class="about-club">
+					<h4>Our Formula:</h4>
+					<ul>
+						<li>Each meeting starts with a theme <i>( ex: under the sea, leapard print, outer space, etc )</i></li>
+						<li>For the next hour, we start coding in HTML or CSS and we usually eat whatever we ordered for catering.</li>
+						<li>We wrap up by sharing to the group <i>( or we put you in partners when there's too many of you. )</i></li>
+					</ul>
+				</div>
+				<marquee behavior=scroll direction="right" scrollamount="10">jjjjjooiiinnnn usssssss</marquee>
+	
+				<p class="about-club"> ♫♪.ılılıll|̲̅̅●̲̅̅|̲̅̅=̲̅̅|̲̅̅●̲̅̅|llılılı.♫♪ </p>
+				<marquee behavior=scroll direction="left" scrollamount="4">oooooooo you wanna join us so baddd</marquee>
+				<p class="about-club">Feel free to check out the different tabs below, as well as our member page for more references about what we do - or to make connections with other columbia students. If you want to be added to the site and haven't already, email a picture of you or your pet to silvers@colum.edu as well as a link to your site.</p>
+			</div>
 
-    <footer>
-        <p>&copy; 2025 Science of the Slain</p>
-    </footer>
+			<aside>
+				<h2>Have you ever had an impulsive idea to do something so awesome and legendary, but then you realize you have 0% money and even if you had one bajillion dollars you think you dont have the motivation to complete the idea that you wanted to do?</h2>
+				<p>This may include, but not limited to, </p>
+				<ul>
+					<li>making an epic rap song</li>
+					<li>twitch streaming</li>
+					<li>making a book/blog or podcast</li>
+					<li>finally getting to work on your portfolio or resume</li>
+					<li>going to the library</li>
+					<li>scrapbooking</li>
+					<li>going grocery shopping</li>
+					<li>or any other high energy task that makes you know will make you into a better human</li>
+				</ul>
+				<p>WELL DO WE HAVE THE SOLUTION FOR YOU!!!</p>
+				<p>You can make a website about it! Come make websites with us that are fun and awesome and cool! Making websites the cheapest most productive hobby in the entire internet - and its REALLY EASY to learn how to do.</p>
+				<p>come learn how to do with with a bunch of other cool people who are really sociable and frinendly!</p>
+			</aside>
+		</main>
+		<div class="nav">
+			<a href="https://engage.colum.edu/club_signup?group_type=47523&category_tags=" target="_blank">Engage</a>
+			<a href="spotify.html">Spotify</a>
+			<a href="discord.html">Discord</a>
+			<a href="https://neocities.org/" target="_blank">Neocities</a>
+		</div>
+		<div class="members">
+			<table>
+				<thead>
+					<tr>
+						<th>President</th>
+						<th>VP + Media Assist</th>
+						<th>Social Media Manager</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr style="border: double 10px;">
+						<td style="background-image: url('css/img/dotsbackgnd.png');">
+							<figure>
+								<!-- https://threshold.imageonline.co/index.php -->
+								<a href="https://loganrsilvers.github.io/intro.html" target="_blank"><img src="css/img/logan.png" alt="img of Logan" style="width:200px; border: solid 10px black;"></a>
+								<figcaption class="about-club">Logan Silvers</figcaption>
+							</figure>
+						</td>
+						<td>
+							<figure>
+								<img src="css/img/sadie.png" alt="img of Sadie" style="width:200px; border: dotted 10px black;">
+								<figcaption>Sadie Racky</figcaption>
+							</figure>
+						</td>
+						<td style="background-image: url('css/img/gridbackground.png');">
+							<figure>
+								<img src="css/img/una.png" alt="img of Una" style="width:200px; border: solid 10px black;">
+								<figcaption class="about-club">Una Roberts</figcaption>
+							</figure>
+						</td>
+					</tr>
+					<tr style="border: double 10px;">
+						<td>
+							<figure>
+								<img src="css/img/eloisedog.jpg" alt="picture of eloise's dog" style="width:200px; border: dashed 10px black;">
+								<figcaption>Eloise Park</figcaption>
+							</figure>
+						</td>
+						<td style="background-image: url('css/img/dotsbackgnd.png');">
+							<figure>
+								<img src="css/img/dog.jpg" alt="img of Gianna" style="width:200px; border: solid 10px black;">
+								<figcaption class="about-club">Gianna Dimperio</figcaption>
+							</figure>
+						</td>
+						<td>
+							<figure>
+								<img src="css/img/cat.jpg" alt="img of Sam" style="width:200px; border: dotted 10px black;">
+								<figcaption>Sam Martinez</figcaption>
+							</figure>
+						</td>
+					</tr>
+					<tr style="border: double 10px;">
+						<td style="background-image: url('css/img/dotsbackgnd.png');">
+							<figure>
+								<img src="css/img/dog.jpg" alt="img of Alice" style="width:200px; border: solid 10px black;">
+								<figcaption class="about-club">fig 7</figcaption>
+							</figure>
+						</td>
+						<td>
+							<figure>
+								<img src="css/img/cat.jpg" alt="img of Jake" style="width:200px; border: dashed 10px black;">
+								<figcaption>fig 8</figcaption>
+							</figure>
+						</td>
+						<td style="background-image: url('css/img/gridbackground.png');">
+							<figure>
+								<img src="css/img/dog.jpg" alt="Image 9" style="width:200px; border: solid 10px black;">
+								<figcaption class="about-club">Figure 9 Caption</figcaption>
+							</figure>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		
+		<div class="footer">
+			<p>&copy; 2025 Logan Silvers</p>
+		</div>
+
 </body>
 </html>
