--- a/index.html
+++ b/index.html
@@ -7,21 +7,19 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script>NekoType="black"</script>
-		<h1 id=nl><script src="https://webneko.net/n20171213.js"></script><a 
-		href="https://webneko.net">Neko</a></h1>
+
 
 		<div class="header">
-			<h1>&lt;/webdev club&gt;</h1>
+			<h1>Science of the Slain</h1>
 		</div>
 		<div class="nav">
-			<a href="https://engage.colum.edu/club_signup?group_type=47523&category_tags=" target="_blank">Engage</a>
-			<a href="spotify.html">Spotify</a>
-			<a href="discord.html">Discord</a>
-			<a href="https://neocities.org/" target="_blank">Neocities</a>
+			<a href="#">lonk 1</a>
+			<a href="#">twoo</a>
+			<a href="#">tres</a>
+			<a href="#">four</a>
 		</div>
 		<main>
-			<div class="about-site" style="background-image: url('css/img/gridbackground.png');">
+			<div class="about-site">
 				<h2 class="about-club">About Us</h2>
 				<marquee behavior=scroll direction="right" scrollamount="4">jjjjjooiiinnnn usssssss</marquee>
 				<p class="about-club">•°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ</p>
@@ -61,86 +59,7 @@
 				<p>come learn how to do with with a bunch of other cool people who are really sociable and frinendly!</p>
 			</aside>
 		</main>
-		<div class="nav">
-			<a href="https://engage.colum.edu/club_signup?group_type=47523&category_tags=" target="_blank">Engage</a>
-			<a href="spotify.html">Spotify</a>
-			<a href="discord.html">Discord</a>
-			<a href="https://neocities.org/" target="_blank">Neocities</a>
-		</div>
-		<div class="members">
-			<table>
-				<thead>
-					<tr>
-						<th>President</th>
-						<th>VP + Media Assist</th>
-						<th>Social Media Manager</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr style="border: double 10px;">
-						<td style="background-image: url('css/img/dotsbackgnd.png');">
-							<figure>
-								<!-- https://threshold.imageonline.co/index.php -->
-								<a href="https://loganrsilvers.github.io/intro.html" target="_blank"><img src="css/img/logan.png" alt="img of Logan" style="width:200px; border: solid 10px black;"></a>
-								<figcaption class="about-club">Logan Silvers</figcaption>
-							</figure>
-						</td>
-						<td>
-							<figure>
-								<img src="css/img/sadie.png" alt="img of Sadie" style="width:200px; border: dotted 10px black;">
-								<figcaption>Sadie Racky</figcaption>
-							</figure>
-						</td>
-						<td style="background-image: url('css/img/gridbackground.png');">
-							<figure>
-								<img src="css/img/una.png" alt="img of Una" style="width:200px; border: solid 10px black;">
-								<figcaption class="about-club">Una Roberts</figcaption>
-							</figure>
-						</td>
-					</tr>
-					<tr style="border: double 10px;">
-						<td>
-							<figure>
-								<img src="css/img/eloisedog.jpg" alt="picture of eloise's dog" style="width:200px; border: dashed 10px black;">
-								<figcaption>Eloise Park</figcaption>
-							</figure>
-						</td>
-						<td style="background-image: url('css/img/dotsbackgnd.png');">
-							<figure>
-								<img src="css/img/dog.jpg" alt="img of Gianna" style="width:200px; border: solid 10px black;">
-								<figcaption class="about-club">Gianna Dimperio</figcaption>
-							</figure>
-						</td>
-						<td>
-							<figure>
-								<img src="css/img/cat.jpg" alt="img of Sam" style="width:200px; border: dotted 10px black;">
-								<figcaption>Sam Martinez</figcaption>
-							</figure>
-						</td>
-					</tr>
-					<tr style="border: double 10px;">
-						<td style="background-image: url('css/img/dotsbackgnd.png');">
-							<figure>
-								<img src="css/img/dog.jpg" alt="img of Alice" style="width:200px; border: solid 10px black;">
-								<figcaption class="about-club">fig 7</figcaption>
-							</figure>
-						</td>
-						<td>
-							<figure>
-								<img src="css/img/cat.jpg" alt="img of Jake" style="width:200px; border: dashed 10px black;">
-								<figcaption>fig 8</figcaption>
-							</figure>
-						</td>
-						<td style="background-image: url('css/img/gridbackground.png');">
-							<figure>
-								<img src="css/img/dog.jpg" alt="Image 9" style="width:200px; border: solid 10px black;">
-								<figcaption class="about-club">Figure 9 Caption</figcaption>
-							</figure>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
+		
 		
 		<div class="footer">
 			<p>&copy; 2025 Logan Silvers</p>
