--- a/math/first.html
+++ b/math/first.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Science of the Slain</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Level 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    
 
 		<div class="header">
-			<h1>Science of the Slain</h1>
+			<h1>MATH of the murdered</h1>
 		</div>
 		<div class="nav">
-			<a href="science/first.html">Science</a>
-			<a href="math/first.html">Math</a>
+			<a href="../index.html">Home</a>
+			<a href="../science/first.html">Science</a>
 			<a href="#">Literacy</a>
 			<a href="#">Art Theory</a>
 		</div>
