--- a/art/first.html
+++ b/art/first.html
@@ -10,13 +10,13 @@
     
 
 		<div class="header">
-			<h1>SCIENCE of the Slain</h1>
+			<h1>ART of the assasined</h1>
 		</div>
 		<div class="nav">
 			<a href="../index.html">Home</a>
 			<a href="../math/first.html">Math</a>
 			<a href="#">Literacy</a>
-			<a href="../art/first.html">Art Theory</a>
+			<a href="../science/first.html">Science</a>
 		</div>
 		<main>
 			<div class="about-site">
