--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<a href="science/first.html">Science</a>
 			<a href="math/first.html">Math</a>
 			<a href="#">Literacy</a>
-			<a href="#">Art Theory</a>
+			<a href="art/first.html">Art Theory</a>
 		</div>
 		<main>
 			<div class="about-site">
