--- a/math/first.html
+++ b/math/first.html
@@ -16,7 +16,7 @@
 			<a href="../index.html">Home</a>
 			<a href="../science/first.html">Science</a>
 			<a href="#">Literacy</a>
-			<a href="#">Art Theory</a>
+			<a href="../art/first.html">Art Theory</a>
 		</div>
 		<main>
 			<div class="about-site">
