--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 		<div class="header">
 			<h1>Science of the Slain</h1>
+            <img src="css/img/fire.gif" alt="Science of the Slain Logo" class="logo">
 		</div>
 		<div class="nav">
 			<a href="science/first.html">Science</a>
@@ -40,7 +41,7 @@
                 <p>
                     will you accept the challenge?
                 </p>
-				<h4 class="about-club"></h4>
+                <img src="css/img/scaryentrance.gif" alt="Science of the Slain Logo" class="logo">
 				
 			</div>
 
@@ -51,7 +52,7 @@
 		
 		
 		<div class="footer">
-			<p>&copy; 2025 Logan Silvers</p>
+			<p>&copy; 2025 slayers</p>
 		</div>
 
 </body>
