--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
 			</div>
 
 			<aside>
-				
+				<img src="css/img/avatarph.gif" alt="avatar" class="side-image">
+                <p>yr avatar's name</p>
+                <ul>
+                    <li>current player score:</li>
+                    <li># Lives SAVED!: </li>
+                </ul>
 			</aside>
 		</main>
 		
