--- a/index.html
+++ b/index.html
@@ -19,41 +19,11 @@
 			<a href="#">Literacy</a>
 			<a href="art/first.html">Art Theory</a>
 		</div>
-		<main>
-			<div class="about-site">
-				<p class="about-club">•°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ</p>
-                <p>
-                    You are the wizards apprentice.
-                </p>
-                <p>
-                    You are tasked with the study of the sciences, math, literacy, and art theory.
-                    One of your friends is sick and needs your help.
-                </p>
-                <p>
-                    You decide to help him by stealing the wizards grimoire.
-                </p>
-                <p>
-                    the spell you cast has backfired, and now your friend is dying.
-                </p>
-                <p>
-                    now you actually have to learn the sciences, math, literacy, and art theory.
-                </p>
-                <p>
-                    will you accept the challenge?
-                </p>
-                <img src="css/img/scaryentrance.gif" alt="Science of the Slain Logo" class="logo">
-				
-			</div>
-
-			<aside>
-				<img src="css/img/avatarph.gif" alt="avatar" class="side-image">
-                <p>yr avatar's name</p>
-                <ul>
-                    <li>current player score:</li>
-                    <li># Lives SAVED!: </li>
-                </ul>
-			</aside>
-		</main>
+        
+        <div id="book">
+            <img src="css/img/book.png" alt="Book Image">
+            <div class="overlay-text">Your Text Here</div>
+        </div>
 		
 		
 		<div class="footer">
